<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="acilisSayfasiKutuphane">Kütüphane</string>
    <string name="acilisSayfasiKullaniciGirisi">Kullanıcı Girişi</string>
    <string name="acilisSayfasiYoneticiGirisi">Yönetici Girişi</string>
    <string name="kullaniciGirisiEMail">E-Mail</string>
    <string name="kullaniciGirisiParola">Parola</string>
    <string name="yoneticiGirisiEMail">E-Mail</string>
    <string name="yoneticiGirisiParola">Parola</string>
    <string name="kullaniciGirisiGirisYap">Giriş Yap</string>
    <string name="yoneticiGirisiGirisYap">Giriş Yap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
