<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YoneticiGirisiActivity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarYoneticiGirisi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yoneticiGirisiEMail"
        android:textSize="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/txtYoneticiAdiGiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yoneticiGirisiEMail"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yoneticiGirisiParola"
        android:textSize="25dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/txtYoneticiParolaGiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yoneticiGirisiParola"
        android:layout_marginTop="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/btnYoneticiGiris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yoneticiGirisiGirisYap"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/button_background"/>

    <ProgressBar
        android:id="@+id/islemCubugu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"/>

</RelativeLayout>